# svelte

./: .gitignore  Cargo.toml  Justfile  actual_client.js  actual_server.js
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/compiler/: AUDIT.md  Cargo.toml
crates/compiler-napi/: Cargo.toml
crates/compiler-napi/src/: lib.rs
crates/compiler/docs/: compiler-alignment-plan.md
crates/compiler/examples/: js_output_snapshots.rs  real_world_canaries.rs
crates/compiler/examples/support/: batch_compile.rs  compile_with_js.mjs  real_world_canaries.json
crates/compiler/src/: api.rs  ast.rs  cst.rs  error.rs  js.rs  lib.rs  names.rs  printing.rs  source.rs
crates/compiler/src/api/: elements.rs  modern.rs  runes_mode.rs  scan.rs  validation.rs
crates/compiler/tests/: api.rs  ast_alignment_missing_nodes.rs  block_branch_kinds.rs  compiler_fixtures.rs  js_output_snapshots.rs
crates/kit/: Cargo.toml
crates/kit/src/: adapt.rs  adapt_entry.rs  analyze.rs  array.rs  builder.rs  config.rs  constants.rs  cookie.rs  css.rs  default-error.html  entities.rs  env.rs  error.rs  escape.rs  exports.rs  exports_internal.rs  exports_node.rs  exports_public.rs  features.rs  filesystem.rs  fork.rs  form_utils.rs  functions.rs  generate_manifest.rs  hash.rs  http.rs  lib.rs  manifest.rs  misc.rs  node_polyfills.rs  page_options.rs  pathname.rs  peer_import.rs  postbuild.rs  postbuild_analyze.rs  postbuild_prerender.rs  prerender_errors.rs  prerender_html.rs  prerender_output.rs  prerender_paths.rs  (+29 more)
crates/kit/src/runtime/: shared.rs
crates/kit/src/runtime/server/: app.rs  behavior.rs  data.rs  endpoint.rs  event.rs  index.rs  mod.rs  page.rs  page_crypto.rs  page_csp.rs  page_load.rs  page_serialize.rs  remote.rs  request.rs  types.rs  utils.rs  validate_headers.rs
crates/kit/tests/: adapt.rs  adapt_entry.rs  analyze.rs  apps_basics_unit_test_client.rs  build_errors_env.rs  build_errors_prerender.rs  build_errors_server_only.rs  build_errors_syntax_error.rs  builder.rs  config.rs  constants.rs  cookie.rs  crawl.rs  css.rs  entities.rs  env.rs  escape.rs  exports.rs  exports_hooks_sequence.rs  exports_index.rs  exports_internal.rs  exports_internal_server.rs  exports_node.rs  exports_utils.rs  exports_vite_build_utils.rs  exports_vite_static_analysis_index.rs  exports_vite_static_analysis_utils.rs  exports_vite_utils.rs  features.rs  filesystem.rs  generate_manifest.rs  http.rs  load_page_nodes.rs  manifest.rs  misc.rs  node_polyfills.rs  page_actions.rs  page_crypto.rs  page_csp.rs  page_load.rs  (+39 more)
crates/svelte-cli/: Cargo.toml
crates/svelte-compiler/: Cargo.toml  PORT_PLAN.md  README.md
crates/svelte-compiler-napi/: Cargo.toml
crates/svelte-compiler-napi/src/: lib.rs
crates/svelte-compiler/docs/: compiler-alignment-plan.md  rust-port-architecture.md
crates/svelte-compiler/src/: api.rs  cst.rs  error.rs  estree.rs  js.rs  lib.rs  names.rs  primitives.rs  printing.rs  source.rs
crates/svelte-compiler/src/api/: debug_tests.rs  legacy.rs  modern.rs  runes_mode.rs  scan.rs  validation.rs
crates/svelte-compiler/src/api/validation/: css.rs  imports.rs  runes.rs  scope.rs  snippet.rs  template.rs
crates/svelte-compiler/src/ast/: common.rs  legacy.rs  modern.rs
crates/svelte-compiler/src/compiler/: mod.rs
crates/svelte-compiler/src/compiler/phases/: component.rs  mod.rs
crates/svelte-compiler/src/compiler/phases/analyze/: mod.rs  validation.rs  warnings.rs
crates/svelte-compiler/src/compiler/phases/analyze/validation/: component.rs  module.rs
crates/svelte-compiler/src/compiler/phases/analyze/validation/component/: imports.rs  runes.rs  snippet.rs  template.rs
crates/svelte-compiler/src/compiler/phases/emit/: mod.rs
crates/svelte-compiler/src/compiler/phases/lower/: mod.rs
crates/svelte-compiler/src/compiler/phases/migrate/: mod.rs
crates/svelte-compiler/src/compiler/phases/parse/: cst.rs  mod.rs  oxc.rs  regions.rs
crates/svelte-compiler/src/compiler/phases/parse/css/: parser.rs
crates/svelte-compiler/src/compiler/phases/preprocess/: mod.rs
crates/svelte-compiler/src/compiler/phases/transform/: codegen.rs  mod.rs  output.rs  sourcemap.rs
crates/svelte-compiler/src/compiler/phases/transform/codegen/: dynamic_markup.rs  generic_client.rs  generic_renderer.rs  generic_server.rs  static_markup.rs
crates/svelte-compiler/src/compiler/phases/transform/codegen/templates/: module.client.js
crates/svelte-compiler/src/compiler/phases/transform/codegen/templates/dynamic_markup/: async_if_chain.server.js  binding_value_member.client.js  each_index_paragraph.client.js  each_index_paragraph.server.js  each_span_expression.client.js  each_span_expression.server.js
crates/svelte-compiler/src/compiler/phases/transform/css/: mod.rs  rewrite.rs  scoping.rs  usage.rs
crates/svelte-compiler/tests/: api.rs  block_branch_kinds.rs  compiler_fixtures.rs  debug_api.rs  unported_regressions.rs
crates/svelte-compiler/tests/support/fixture/: mod.rs
crates/svelte-compiler/tests/support/repo/: mod.rs
crates/svelte-syntax/: Cargo.toml  README.md
crates/svelte-syntax/src/: ast.rs  cst.rs  error.rs  lib.rs  primitives.rs  source.rs
crates/svelte-syntax/src/ast/: legacy.rs  modern.rs
crates/svelte-syntax/src/parse/: mod.rs  oxc.rs
crates/svelte-syntax/src/parse/component/: legacy.rs  mod.rs  modern.rs
crates/svelte-syntax/src/parse/css/: mod.rs
crates/svelte-test-fixtures/: Cargo.toml
crates/svelte-test-fixtures/src/: config.rs  discovery.rs  lib.rs  suite.rs
crates/svelte-test-fixtures/tests/: config_loading.rs
crates/svelte-vite-rolldown/: Cargo.toml
crates/svelte-vite-rolldown-napi/: Cargo.toml
crates/svelte-vite-rolldown-napi/src/: lib.rs
crates/svelte-vite-rolldown/src/: lib.rs
crates/syntax/: Cargo.toml  README.md
crates/syntax/src/: arena.rs  ast.rs  compat.rs  cst.rs  error.rs  estree.rs  js.rs  lib.rs  primitives.rs  source.rs
crates/vite-rolldown/: Cargo.toml  README.md
crates/vite-rolldown-napi/: Cargo.toml  README.md
crates/vite-rolldown-napi/src/: lib.rs
crates/vite-rolldown/src/: lib.rs
docs/: rust-port-vision.md
(+73 files in other folders)
