[package]
name = "svelte-kit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SvelteKit core port experiments"

[dependencies]
base64 = "0.22.1"
camino.workspace = true
brotli = "8.0.2"
flate2 = "1.1.4"
http = "1.4.0"
json5 = "0.4.1"
mime_guess = "2.0.5"
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_parser.workspace = true
oxc_span.workspace = true
percent-encoding = "2.3.1"
rayon.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
svelte-syntax.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
pathdiff = "0.2.3"
