[package]
name = "svelte-syntax"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Lightweight syntax-layer crate for the Rust Svelte toolchain"
readme = "README.md"

[dependencies]
bumpalo.workspace = true
camino.workspace = true
html-escape.workspace = true
lightningcss.workspace = true
miette.workspace = true
memchr.workspace = true
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_ast_visit.workspace = true
oxc_estree.workspace = true
oxc_parser.workspace = true
oxc_span.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-svelte.workspace = true
unicode-ident.workspace = true
winnow.workspace = true
