[package]
name = "svelte-test-fixtures"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Fixture discovery and loading for Svelte compiler parity tests"

[dependencies]
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
