[package]
name = "svelte-vite-rolldown"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
svelte-compiler = { path = "../svelte-compiler" }
